[tool.poetry]
name = "beebot"
version = "0.1.0"
description = "A friendly AI agent that works"
authors = ["Erik Peterson <e@eriklp.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "beebot" }]

[tool.poetry.dependencies]
# I hate this version specification but we can't use python-statemachine in 3.12
python = ">=3.9,<3.12"
autopack-tools = "^0.2.6"
langchain = ">=0.0.215"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
python-statemachine = "^2.1.0"
playwright = "^1.35.0"
lxml = "^4.9.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.276"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"